--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "keyv": "^4.1.1",
     "morgan": "~1.9.1",
     "mysql2": "^2.3.3",
+    "nodemailer": "^6.9.12",
     "nodemon": "^3.1.0",
     "sequelize": "^6.17.0",
     "speakeasy": "^2.0.0"
